Added the answers page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,4 +3,7 @@
     <a href="/">Home</a>
     <br>
     <a href="/about">About</a>
+    <br>
+    <a href="/theanswers">The Answers</a>
+    <br>
 </header>
